# bili-hardcore

./: .gitignore  CONFIG_EXAMPLE.md  Cargo.toml  LICENSE  README.md  bili-hardcore-sh.spec  bili-hardcore.spec  install.ps1  install.sh  requirements.txt
.claude/skills/version-release/: SKILL.md
.github/ISSUE_TEMPLATE/: 我遇到了一个bug.md  😡我tm遇到了一个bug.md
.github/workflows/: main.yml  manual-release.yml  release.yml
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  keyboard-handling.md  logging-guidelines.md  quality-guidelines.md
.trellis/spec/guides/: code-reuse-thinking-guide.md  cross-layer-thinking-guide.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/05-27-ui/: task.json
.trellis/tasks/06-12-llm/: check.jsonl  task.json
.trellis/tasks/archive/2026-05/00-bootstrap-guidelines/: task.json
.trellis/tasks/archive/2026-05/05-25-python-to-rust-ratatui-tui/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-05/05-25-refactor-api-provider-openai/: prd.md  task.json
.trellis/tasks/archive/2026-05/05-26-captcha-sixel-image/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-05/05-26-config-buttons-vertical/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-05/05-26-config-reset-button/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-05/05-26-python-rust/: task.json
.trellis/tasks/archive/2026-05/05-27-fix-ansi/: prd.md  task.json
.trellis/workspace/karben233/: index.md  journal-1.md
bili-hardcore/: main.py
bili-hardcore/client/: login.py  senior.py  user_info.py  ziantt.py
bili-hardcore/config/: config.py
bili-hardcore/scripts/: check.py  check_config.py  login.py  start_senior.py  validate.py
bili-hardcore/tools/: bili_ticket.py  logger.py  request_b.py
bili-hardcore/tools/LLM/: deepseek.py  gemini.py  openai.py
docs/release-notes/: v1.0.1-beta.md  v1.0.2.md  v1.0.3.md  v1.0.4.md  v1.0.5.md  v1.0.6.md
src/: app.rs  config.rs  crypto.rs  error.rs  input.rs  main.rs  presets.json
src/api/: client.rs  mod.rs
src/llm/: mod.rs  openai.rs
src/ui/: config_page.rs  home.rs  mod.rs  quiz.rs
(+31 files in other folders)
